--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
             <img src="images/WebStudio.svg" alt="webstudio logo">
         </a>
 
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li>info@example.com</li>
-                <li>+38 099 111 11 11</li>
-            </ul>
+            <address>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <pi>info@example.com</p>
+                <pi>+38 099 111 11 11</p>
+                </address
+                >
 
   </footer>
 </body>
