--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <pi>info@example.com</p>
-                <pi>+38 099 111 11 11</p>
-                </address
-                >
+                <p>info@example.com</p>
+                <p>+38 099 111 11 11</p>
+            </address>
 
   </footer>
 </body>
