--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </a>
 
             <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <p>info@example.com</p>
-                <p>+38 099 111 11 11</p>
+                <p><a href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</a></p>
+                <p><a href="mailto:info@example.com">info@example.com</a></p>
+                <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
             </address>
 
   </footer>
