--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <img src="images/WebStudio.svg" alt="webstudio logo">
            </a>
         
-           <ul>
+           <ul class="site-nav">
               <li> <a href="">Студия</a>
               <li> <a href="">Портфолио</a>
               <li> <a href="">Контакты</a>
