--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
               <img src="images/WebStudio.svg" alt="webstudio logo">
            </a>
         
-           <ul class="site-nav">
-              <li> <a href="">Студия</a>
-              <li> <a href="">Портфолио</a>
-              <li> <a href="">Контакты</a>
-              <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              <li> <a href="tel:+380961111111">tel:+38 096 111 11 11</a>
+           <ul>
+              <li> <a href="" class="link">Студия</a>
+              <li> <a href="" class="link">Портфолио</a>
+              <li> <a href="" class="link">Контакты</a>
+              <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <li> <a href="tel:+380961111111" class="link">
+                  tel:+38 096 111 11 11</a>
            </ul>
        </nav>
     </header>
