add fonts` colors

--- a/index.html
+++ b/index.html
@@ -24,38 +24,39 @@
            </ul>
        </nav>
     </header>
-
+<!-- hero -->
       <main>
     <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-                <a href="">Заказать услугу</a>
+            <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+                <a href="" class="main-title-link">Заказать услугу</a>
 
     </section>
-
-    <section>
-            <h2>General features</h2>
+<!-- General features -->
+    <section class="general-features">
+            <h2 class="title">General features</h2>
                 <ul>
-                    <li>    <h3>Внимание к деталям</h3>
-                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <li>  <h3 class="general-features-title">Внимание к деталям</h3>
+                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
 
-                    <li> <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <li> <h3 class="general-features-title"></h3class>Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
 
-                    <li> <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <li> <h3 class="general-features-title"></h3class>Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
 
-                    <li>    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <li>    <h3 class="general-features-title"></h3class>Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
 
                 </ul>
     </section>
 
-    <section>
-            <h2>Чем мы занимаемся</h2>
+    <!-- деятельность -->
+    <section class="making">
+            <h2 class="title">Чем мы занимаемся</h2>
                 <ul>
                     <li><img src="images/sample1.png" alt="workplace1" width="370"></li>
                     <li><img src="images/sample2.png" alt="workplace2" width="370"></li>
@@ -63,37 +64,37 @@
 
                 </ul>
           </section>
-
-    <section>
-            <h2>Наша команда</h2>
+<!-- our team -->
+    <section class="our-team">
+            <h2 class="title">Наша команда</h2>
                 <ul>
                     <li><img src="images/igor.png" alt="Igor's photo" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p></li>
+                        <h3 class="name">Игорь Демьяненко</h3>
+                            <p class="text">Product Designer</p></li>
                     <li><img src="images/Olga.png" alt="Olga's photo" width="270">
-                        <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p></li>
+                        <h3 class="name">Ольга Репина</h3>
+                            <p class="text">Frontend Developer</p></li>
                     <li><img src="images/Nick.png" alt="Nikolay's photo" width="270">
-                        <h3>Николай Тарасов</h3>
-                            <p>Marketing</p></li>
+                        <h3 class="name" >Николай Тарасов</h3>
+                            <p class="text">Marketing</p></li>
                     <li><img src="images/Michael.png" alt="Michail's photo" width="270">
-                        <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p></li>
+                        <h3 class="name">Михаил Ермаков</h3>
+                            <p class="text">UI Designer</p></li>
 
                 </ul>
 
     </section>     
   </main>
 
-  <footer>
+  <footer >
         <a href="/">
             <img src="images/WebStudio.svg" alt="webstudio logo">
         </a>
 
             <address>
-                <p><a href="г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a></p>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
-                <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+                <p><a href="г.Киев,пр-тЛесиУкраинки,26" class="home-address">г. Киев, пр-т Леси Украинки, 26</a></p>
+                <p><a href="mailto:info@example.com" class="contact">info@example.com</a></p>
+                <p><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></p>
             </address>
 
   </footer>
