--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 1 </title>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -73,16 +73,16 @@
                 <ul>
                     <li><img src="images/igor.png" alt="Igor's photo" width="270">
                         <h3 class="name">Игорь Демьяненко</h3>
-                            <p class="text">Product Designer</p></li>
+                            <p class="name-text">Product Designer</p></li>
                     <li><img src="images/Olga.png" alt="Olga's photo" width="270">
                         <h3 class="name">Ольга Репина</h3>
-                            <p class="text">Frontend Developer</p></li>
+                            <p class="name-text">Frontend Developer</p></li>
                     <li><img src="images/Nick.png" alt="Nikolay's photo" width="270">
                         <h3 class="name" >Николай Тарасов</h3>
-                            <p class="text">Marketing</p></li>
+                            <p class="name-text">Marketing</p></li>
                     <li><img src="images/Michael.png" alt="Michail's photo" width="270">
                         <h3 class="name">Михаил Ермаков</h3>
-                            <p class="text">UI Designer</p></li>
+                            <p class="name-text">UI Designer</p></li>
 
                 </ul>
 
