--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                    
            <ul>
               <li> <a href="" class="link">Студия</a>
-              <li> <a href="" class="link">Портфолио</a>
+              <li> <a href=".\portfolio.html" class="link">Портфолио</a>
               <li> <a href="" class="link">Контакты</a>
               <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
               <li> <a href="tel:+380961111111" class="link">
