--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="our-team">
             <h2 class="title">Наша команда</h2>
                 <ul>
-                    <li><img src="./images/igor.jpg" alt="Igor's photo" width="270">
+                    <li><img src="./images/Igor.jpg" alt="Igor's photo" width="270">
                         <h3 class="name">Игорь Демьяненко</h3>
                             <p class="name-text">Product Designer</p></li>
                     <li><img src="./images/Olga.jpg" alt="Olga's photo" width="270">
